@startuml

skinparam defaultFontName monospaced

'=======================================================================================================================
class EventInfo<Type, Details> {
    + getType() : Type
    + getDetails<eventType>() : Details<eventType>
==
    - _type
    - _anyEventDetails: std::any
}

'------------------------------------------------------------------------------------------------------------------------
class WindowEvent extends EventInfo

'------------------------------------------------------------------------------------------------------------------------
class KeyboardEvent extends EventInfo

'=======================================================================================================================
class AppEvent {
    one of
==
    None
    WindowEvent
    KeyboardEvent
    // ...
}

'------------------------------------------------------------------------------------------------------------------------
AppEvent *-- WindowEvent 
AppEvent *-- KeyboardEvent 

'=======================================================================================================================
class EventQueue {
    + push(AppEvent)
--
    - pop() -> AppEvent
--
    - _queue
}

'------------------------------------------------------------------------------------------------------------------------
EventQueue *-- AppEvent

'=======================================================================================================================
class AppEventMgr 

'------------------------------------------------------------------------------------------------------------------------
AppEventMgr *-- EventQueue
AppEventMgr --> EventQueue : friend for

'=======================================================================================================================
@enduml
